<resources>
    <string name="app_name">house of coffee</string>
    <string name="name_hint">Costumer Name</string>
    <string name="quantity">1</string>
    <string name="toppings">Toppings:</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity_label">Quantity:</string>
    <string name="send_mail">Send invoice by mail</string>
    <string name="order_button_text">Order</string>
    <string name="order_history_text">All orders</string>
    <string name="clear_history_button">Clear History</string>
    <string name="slogan">the\nhouse\nof\ncoffee</string>
    <string name="thank_you">Thank you, Enjoy your coffee</string>
    <!-- Order summary -->
    <string name="order_summary_title">Order summary</string>
    <string name="order_summary_name">Name: </string>
    <string name="order_summary_whipped_cream">Whipped cream: </string>
    <string name="order_summary_chocolate">Chocolate: </string>
    <string name="order_summary_quantity">Quantity: </string>
    <string name="order_summary_price">Total: </string>
</resources>
