<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee_image"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:paddingRight="16dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/toppings"
                style="@style/heading" />

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="24dp"
                android:textColor="@color/colorPrimaryLight"
                android:text="@string/whipped_cream" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="24dp"
                android:textColor="@color/colorPrimaryLight"
                android:text="@string/chocolate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/quantity_label"
                style="@style/heading"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:onClick="increment"
                    android:padding="8dp"
                    android:textColor="@color/colorDark"
                    android:text="+" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textSize="30sp"
                    android:text="@string/quantity" />

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:onClick="decrement"
                    android:padding="8dp"
                    android:textColor="@color/colorDark"
                    android:text="-" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/order_summary_title"
                style="@style/heading"/>

            <TextView
                android:id="@+id/orderSummary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="" />
            <CheckBox
                android:id="@+id/send_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_mail"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/orderSummary_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="submitOrder"
                    android:layout_margin="8dp"
                    android:text="@string/order_button_text"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDark" />
                <Button
                    android:id="@+id/clear_history"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clearHistory"
                    android:layout_margin="8dp"
                    android:text="@string/clear_history_button"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDark" />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/coffeelogo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                style="@style/list_item"
                android:text="@string/order_history_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <include layout="@layout/history_recycler_view" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>